# sql-ast-api

./: .dockerignore  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  FINAL_SUMMARY.md  FINGERPRINT.md  FRONTEND.md  GITHUB_RELEASE.md  LICENSE  OPTIMIZATION_REPORT.md  PERFORMANCE.md  PLATFORMS.md  QUICKSTART.md  README.md  README_GITHUB.md  RELEASE_NOTES.md  SUMMARY.md  build.rs  docker-compose.yml  test_api.ps1  test_grpc.ps1  test_grpc_client.py
.github/workflows/: ci.yml  release.yml
proto/: sql_parser.proto
src/: main.rs
static/: index.html
