[package]
name = "sql-ast-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = { version = "0.52", features = ["serde", "visitor"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
moka = { version = "0.12", features = ["future"] }
clap = { version = "4.5", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
once_cell = "1.19"
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3           # 最高优化级别
lto = "fat"             # 链接时优化
codegen-units = 1       # 减少代码生成单元
panic = 'abort'         # panic 时直接退出
strip = true            # 剥离符号表
